feat : 활동 그래프 주별, 월별 기능 추가 및 함수 분리